# ComfyUI-send-eagle-slim

./: .gitignore  README.ja.md  README.md  README_ja.md  __init__.py  fai9_send_eagle.py  prompt_info_extractor.py  pyproject.toml  send_eagle.py  send_eagle_with_text.py  util.py
config/: config_loader.py  default_config.json
eagle_client/: api_client.py  data_formatter.py  sender.py
nodes/: send_image_to_eagle_node.py
tests/integration/: run_integration_test.py
tests/unit/: test_eagle_client.py
utils/: common_utils.py
