[project]
name = "comfyui-send-eagle-slim"
description = "Nodes:Send Webp Image to Eagle. This is an extension node for ComfyUI that allows you to send generated images in webp format to Eagle. This extension node is a re-implementation of the Eagle linkage functions of the previous ComfyUI-send-Eagle node, focusing on the functions required for this node."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/shingo1228/ComfyUI-send-eagle-slim"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-send-eagle-slim"
Icon = ""
